--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "axios": "^1.7.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^7.0.1",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^7.1.5",
+    "react-scripts": "^5.0.1",
+    "react-secure-storage": "^1.3.2",
+    "redux-saga": "^1.3.0",
+    "sass": "^1.84.0",
     "universal-cookie": "^7.2.2",
     "web-vitals": "^2.1.4"
   },
